--- a/src/index.css
+++ b/src/index.css
@@ -62,9 +62,7 @@ body{
   
 }
 .cont{
-  width: 100%;
-  border: 1px solid blue;
-  
+  width: 100%; 
 }
 
 .faLink{
@@ -95,4 +93,72 @@ font-weight: var(--font-weight-heading);
   border-color: var(--primary);
   background-color: #f0f8ff;
   outline: none; 
+}
+
+.main-container{
+  max-width: 98%;
+  margin: 0 auto;
+  padding: 0 20px;
+
+}
+.nav-header{
+  margin: 10px 0;
+  padding: 10px;
+  background-color: var(--secondary);
+  border-radius: 15px;
+
+}
+
+.nav-header .faLink{
+font-size: var(--font-size-HM);
+}
+
+.prev-links{
+background-color: var(--button-bg-secondary-active);
+color: var(--button-text-color-secondary);
+font-weight: var(--font-weight-heading);
+padding: 10px 20px;
+border-radius: 10px;
+
+}
+.nav-falink{
+  color: var(--button-text-color-secondary);
+  
+}
+.profile{
+  color:var(--text-secondary) ;
+  font-weight: var(--font-weight-heading);
+}
+.nav-faUser{
+  color:var(--text-secondary) ;
+}
+.profile:active{
+  color: var(--button-bg-primary-active);
+}
+.nav-faUser:active{
+  color: var(--button-bg-primary-active);
+}
+.preview{
+  border: 1px solid var(--button-text-color-secondary);
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-weight: var(--font-weight-heading);
+  background-color: var(--button-bg-secondary-default);
+  color: var(--button-text-color-secondary);
+}
+.preview:active{
+  background-color: var(--button-bg-secondary-active);
+}
+
+.rightmain{
+  width: 55%;
+  background-color: var(--secondary);
+  border-radius:10px ;
+  margin-left: 10px;
+}
+.leftmain{
+  width: 45%;
+  margin-right: 10px;
+  border-radius:10px ;
+  background-color: var(--secondary);
 }
